<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Manual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa212121"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manual_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/back"
            android:fontFamily="@font/avenir_light"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="Manual Guide"
            android:textColor="@color/mytext"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/next1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/disp_next"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pic1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/gandhiji"
                        app:civ_border_color="#9e9e9e"
                        app:civ_border_width="3dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left|center_vertical"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/name1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/first_name"
                            android:textColor="#eeeeee"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/first_title"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/quote1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/first_quote"
                            android:textColor="#9e9e9e" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/next_option"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/next2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/disp_next"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pic2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/swamiji"
                        app:civ_border_color="#9e9e9e"
                        app:civ_border_width="3dp"></de.hdodenhof.circleimageview.CircleImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left|center_vertical"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/name2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/second_name"
                            android:textColor="#eeeeee"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/title2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/second_title"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/quote2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/second_quote"
                            android:textColor="#9e9e9e" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/next_option"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/next3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/disp_next"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pic3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bose"
                        app:civ_border_color="#9e9e9e"
                        app:civ_border_width="3dp"></de.hdodenhof.circleimageview.CircleImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left|center_vertical"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/name3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/third_name"
                            android:textColor="#eeeeee"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/title3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/third_title"
                            android:textColor="#9e9e9e"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/quote3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/avenir_light"
                            android:text="@string/third_quote"
                            android:textColor="#9e9e9e" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/next_option"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>